Fix popup height on iPhone

--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -32,7 +32,7 @@ dialog {
     flex-direction: column;
     overflow: hidden;
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 1px;
 }
 
